@@ -1,5 +1,6 @@
 # Pending release
 
+- Added support for Telluric geo features and geo vectors out of the box!
 - Fix: when converting sequences of coordinates, if the result is another type of object that needs
   to be converted, keep converting them.
 - Fix: suppport older versions of shapely in which geometries can't be imported from the root 
@@ -9,7 +10,7 @@
 
 # v1.3.0
 
-- Added suppport for shapely geometries out of the box!
+- Added suppport for Shapely geometries out of the box!
 - Fix: custom coordinates objects was broken for coordinates sequences in the "_set" helpers.
 
 # v1.2.0
